--- a/MapViewerEngine/_Imports.razor
+++ b/MapViewerEngine/_Imports.razor
@@ -1,3 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.JSInterop;
 @using GbxToolAPI.Client;
 @using GbxToolAPI.Client.Components;
+@using GbxToolAPI.Client.Services;
