--- a/MapViewerEngine/MapViewerEngineToolComponent.razor.css
+++ b/MapViewerEngine/MapViewerEngineToolComponent.razor.css
@@ -5,7 +5,19 @@
 .info-panel {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    position: absolute;
     gap: 2px 10px;
+    position: absolute;
     margin: 20px;
+}
+
+.map-name {
+    position: absolute;
+    margin: 20px 35px;
+    right: 0;
+    font-size: 2.5em;
+    text-align: right;
+}
+
+.map-author {
+    font-size: 0.7em;
 }
