--- a/MapViewerEngine/_Imports.razor
+++ b/MapViewerEngine/_Imports.razor
@@ -1,5 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop;
 @using GbxToolAPI.Client;
 @using GbxToolAPI.Client.Components;
 @using GbxToolAPI.Client.Services;
+@using MapViewerEngine.Modules;
